syntax = "proto3";

                 package itemScriptNames;
service ItemScriptNamesService {
 rpc createItemScriptNames (ItemScriptNamesCreateInput) returns (ItemScriptNames) {}
rpc itemScriptNamesItems (findManyParams) returns (stream ItemScriptNames) {}
rpc itemScriptNames (ItemScriptNamesWhereUniqueInput) returns (ItemScriptNames) {}
rpc updateItemScriptNames (ItemScriptNamesUpdateInput) returns (ItemScriptNames) {}
rpc deleteItemScriptNames (ItemScriptNamesWhereUniqueInput) returns (ItemScriptNames) {} 
 }
message ItemScriptNamesCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemScriptNames {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemScriptNamesWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemScriptNamesUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};